# simple_shell

./: .main.c.swp  235_1034_19755_527927_error.txt  AUTHORS  CMakeLists.txt  README.md  _cat.c  _cd.c  _env.c  _fpath.c  _getenv.c  _ls.c  _printenv.c  _printstr.c  _putchar.c  _pwd.c  _strcmp.c  _strcpy.c  _strcspn.c  _strdup.c  _strlen.c  _strncmp.c  _strtok.c  _unixCmds.c  clearTerminal.c  cmdExists.c  display_prompt.c  docker-compose.yaml  dollar_sign.c  echo.c  ex_cmd.c  executeCommands.c  execute_cmd.c  exit.c  exit_terminal.c  freeCmds.c  guidelines.txt  handleBuiltins.c  handleExternals.c  handle_path.c  helpers.c  (+20 more)
Old Project/: Dockerfile-alpine  _getenv.c  _strcspn.c  _strdup.c  _strlen.c  _strtok.c  cmdExists.c  executeCommands.c  hsh  listItems.c  main.h  maoshInit.c  shellEnv.c  tokenizeInput.c
